--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arya's Collection - Donat, Risol, dan Custom Bucket</title>
-    <meta name="description" content="Toko donat dan risol premium dengan bahan pilihan. Pengiriman ke seluruh Pare, Kediri.">
+    <meta name="description" content="Toko donat dan risol premium dengan bahan pilihan. Pengiriman ke seluruh sambirejo, Kediri.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
@@ -777,7 +777,7 @@
         <div class="container header-container">
             <a href="#" class="logo">
                 <img src="20250610_082836_0000.png" alt="Arya's Collection Logo" class="logo-img">
-                <span class="logo-text">Arya's<span>Collection</span></span>
+                <span class="logo-text">Arya's_<span>Collection</span></span>
             </a>
             <button class="menu-toggle" aria-label="Toggle menu">
                 <i class="fas fa-bars"></i>
@@ -1040,7 +1040,7 @@
 
 Semua dibuat fresh, tanpa pengawet, dan pakai bahan pilihan. Nggak cuma soal rasa, tapi juga pengalaman—karena kami percaya, camilan enak itu yang bikin hati ikut senang.</p>
                     <div class="social-links">
-                        <a href="https://www.instagram.com/donut_suka2" aria-label="Instagram" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/arya's.collect1on" aria-label="Instagram" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
                         <a href="https://www.facebook.com/aryaanieaya" aria-label="Facebook" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
                         <a href="https://twitter.com/donatsukasuka" aria-label="Twitter" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
                     </div>
