--- a/index.html
+++ b/index.html
@@ -1040,7 +1040,7 @@
 
 Semua dibuat fresh, tanpa pengawet, dan pakai bahan pilihan. Nggak cuma soal rasa, tapi juga pengalaman—karena kami percaya, camilan enak itu yang bikin hati ikut senang.</p>
                     <div class="social-links">
-                        <a href="https://www.instagram.com/aryas.collect1on" aria-label="Instagram" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/arya.collect1on?igsh=eHBmbWkyb3lzOWVx" aria-label="Instagram" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
                         <a href="https://www.facebook.com/aryaanieaya" aria-label="Facebook" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
                         <a href="https://twitter.com/donatsukasuka" aria-label="Twitter" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
                     </div>
