--- a/index.html
+++ b/index.html
@@ -875,9 +875,9 @@
                         <img src="20250610_062607_0000.png" alt="Donat Coklat Belgia" loading="lazy">
                     </div>
                     <div class="product-info">
-                        <h3 class="product-name">Coklat Putih</h3>
+                        <h3 class="product-name">Matcha</h3>
                         <p class="product-price">Rp 2.000</p>
-                        <p class="product-description">Donut lembut dengan glaze Coklat putih</p>
+                        <p class="product-description">Donut lembut dengan glaze Matcha</p>
                         <span class="product-category">Donat</span>
                     </div>
                 </div>
@@ -900,6 +900,30 @@
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Kelapa Parut</h3>
+                        <p class="product-price">Free</p>
+                        <p class="product-description"></p>
+                        <span class="product-category">Topping</span>
+                    </div>
+                </div>
+
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="20250610_062607_0000.png" alt="Donat Coklat Belgia" loading="lazy">
+                    </div>
+                    <div class="product-info">
+                        <h3 class="product-name">Keju</h3>
+                        <p class="product-price">Free</p>
+                        <p class="product-description"></p>
+                        <span class="product-category">Topping</span>
+                    </div>
+                </div>
+
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="20250610_062607_0000.png" alt="Donat Coklat Belgia" loading="lazy">
+                    </div>
+                    <div class="product-info">
+                        <h3 class="product-name">ChochoChip</h3>
                         <p class="product-price">Free</p>
                         <p class="product-description"></p>
                         <span class="product-category">Topping</span>
