--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@
                 <!-- Product 1 -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="20250610_062607_0000.png" alt="Donat Taro Premium" loading="lazy">
+                        <img src="coklat.png" alt="Donat Taro Premium" loading="lazy">
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Coklat</h3>
@@ -835,7 +835,7 @@
                 <!-- Product 2 -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="20250610_062607_0000.png" alt="Donat Matcha Jepang" loading="lazy">
+                        <img src="taro.png" alt="Donat Matcha Jepang" loading="lazy">
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Taro</h3>
@@ -848,7 +848,7 @@
                 <!-- Product 3 -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="20250610_062607_0000.png" alt="Donat Coklat Belgia" loading="lazy">
+                        <img src="tiramisu.png" alt="Donat Coklat Belgia" loading="lazy">
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Tiramisu</h3>
@@ -860,7 +860,7 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="20250610_062607_0000.png" alt="Donat Coklat Belgia" loading="lazy">
+                        <img src="mocacino.png" alt="Donat Coklat Belgia" loading="lazy">
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Mocacino</h3>
@@ -872,7 +872,7 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="20250610_062607_0000.png" alt="Donat Coklat Belgia" loading="lazy">
+                        <img src="matcha.png" alt="Donat Coklat Belgia" loading="lazy">
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Matcha</h3>
@@ -960,7 +960,7 @@
                 <!-- Product 1 -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="20250610_062607_0000.png" alt="Risol Mayo Special" loading="lazy">
+                        <img src="risol biasa.jpg" alt="Risol Mayo Special" loading="lazy">
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Risol</h3>
@@ -973,7 +973,7 @@
                 <!-- Product 2 -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="20250610_062607_0000.png" alt="Risol Keju Mozzarella" loading="lazy">
+                        <img src="risol jumbo.jpg" alt="Risol Keju Mozzarella" loading="lazy">
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Risol Premiun</h3>
@@ -989,7 +989,7 @@
                 <!-- Product 1 -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="20250610_062607_0000.png" alt="Bucket Premium 20pcs" loading="lazy">
+                        <img src="snack.jpg" alt="Bucket Premium 20pcs" loading="lazy">
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Snack</h3>
@@ -1001,7 +1001,7 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="20250610_062607_0000.png" alt="Bucket Mix Donat & Risol" loading="lazy">
+                        <img src="boneka.jpg" alt="Bucket Mix Donat & Risol" loading="lazy">
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Boneka</h3>
@@ -1014,7 +1014,7 @@
                 <!-- Product 2 -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="20250610_062607_0000.png" alt="Bucket Mix Donat & Risol" loading="lazy">
+                        <img src="boneks+snack.jpg" alt="Bucket Mix Donat & Risol" loading="lazy">
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Boneka + Snack</h3>
