--- a/index.html
+++ b/index.html
@@ -882,10 +882,6 @@
                     </div>
                 </div>
 
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="20250610_062607_0000.png" alt="Donat Coklat Belgia" loading="lazy">
-                    </div>
                     <div class="product-info">
                         <h3 class="product-name">Kacang</h3>
                         <p class="product-price">Free</p>
@@ -1014,7 +1010,7 @@
                 <!-- Product 2 -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="boneks+snack.jpg" alt="Bucket Mix Donat & Risol" loading="lazy">
+                        <img src="boneka+snack.jpg" alt="Bucket Mix Donat & Risol" loading="lazy">
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Boneka + Snack</h3>
