--- a/index.html
+++ b/index.html
@@ -881,7 +881,8 @@
                         <span class="product-category">Donat</span>
                     </div>
                 </div>
-
+                
+                <div class="product-card">
                     <div class="product-info">
                         <h3 class="product-name">Kacang</h3>
                         <p class="product-price">Free</p>
