--- a/index.html
+++ b/index.html
@@ -947,7 +947,7 @@
                 <!-- Product 1 -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="risol biasa.jpg" alt="Risol Mayo Special" loading="lazy">
+                        <img src="0eafe3cdeb7064e7754cbb180219d729.jpg" alt="Risol Mayo Special" loading="lazy">
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Risol</h3>
@@ -986,6 +986,30 @@
                     </div>
                 </div>
 
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="IMG-20250622-WA0001.jpg" alt="Bucket Mix Donat & Risol" loading="lazy">
+                    </div>
+                    <div class="product-info">
+                        <h3 class="product-name">Bunga</h3>
+                        <p class="product-price">Rp 25.000-50.000</p>
+                        <p class="product-description">Paket lengkap 10 pcs bunga gliter ( Bahan: pita satin, pita organdi, kawat buku, kain tile).</p>
+                        <span class="product-category">Bucket</span>
+                    </div>
+                </div>
+
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="IMG_20250622_194040.jpg" alt="Bucket Mix Donat & Risol" loading="lazy">
+                    </div>
+                    <div class="product-info">
+                        <h3 class="product-name">Bunga</h3>
+                        <p class="product-price">Rp 25.000-50.000</p>
+                        <p class="product-description">Paket lengkap 10 pcs bunga gliter ( Bahan: pita satin, pita organdi, kawat buku, kain tile).</p>
+                        <span class="product-category">Bucket</span>
+                    </div>
+                </div>
+                
                 <div class="product-card">
                     <div class="product-image">
                         <img src="boneka.jpg" alt="Bucket Mix Donat & Risol" loading="lazy">
