--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="IMG_20250622_194040.jpg" alt="Bucket Mix Donat & Risol" loading="lazy">
+                        <img src="IMG-20250603-WA0045.jpg" alt="Bucket Mix Donat & Risol" loading="lazy">
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Bunga</h3>
