--- a/index.html
+++ b/index.html
@@ -970,6 +970,22 @@
                     </div>
                 </div>
             </div>
+
+            <h3 class="product-category-title">Cromboloni</h3>
+            <div class="product-grid">
+                <!-- Product 1 -->
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="0eafe3cdeb7064e7754cbb180219d729.jpg" alt="Risol Mayo Special" loading="lazy">
+                    </div>
+                    <div class="product-info">
+                        <h3 class="product-name">Cromboloni</h3>
+                        <p class="product-price"></p>
+                        <p class="product-description">Cromboloni isi keju mozarella.</p>
+                        <span class="product-category">Risol</span>
+                    </div>
+                </div>
+            </div>
             
             <h3 class="product-category-title">Bucket Custom</h3>
             <div class="product-grid">
