--- a/index.html
+++ b/index.html
@@ -976,12 +976,12 @@
                 <!-- Product 1 -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="0eafe3cdeb7064e7754cbb180219d729.jpg" alt="Risol Mayo Special" loading="lazy">
+                        <img src="IMG_20250703_171659.jpg" alt="Risol Mayo Special" loading="lazy">
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">Cromboloni</h3>
                         <p class="product-price"></p>
-                        <p class="product-description">Cromboloni isi keju mozarella.</p>
+                        <p class="product-description">Spesial cromboloni isi fla susu.</p>
                         <span class="product-category">Risol</span>
                     </div>
                 </div>
