--- a/index.html
+++ b/index.html
@@ -982,7 +982,7 @@
                         <h3 class="product-name">Cromboloni</h3>
                         <p class="product-price"></p>
                         <p class="product-description">Spesial cromboloni isi fla susu.</p>
-                        <span class="product-category">Risol</span>
+                        <span class="product-category">Cromboloni</span>
                     </div>
                 </div>
             </div>
