--- a/index.html
+++ b/index.html
@@ -881,6 +881,10 @@
                         <span class="product-category">Donat</span>
                     </div>
                 </div>
+            </div>
+
+                <h3 class="product-category-title">Toping</h3>
+            <div class="product-grid">
                 
                 <div class="product-card">
                     <div class="product-info">
